package _2_结构型模式._7_代理模式_Proxy._1_静态代理;

public interface Action {
    void signin();
    void signout();
    void register();
    void forget();
}
