@startuml

interface Action {
    + {abstract} signin(): void
    + {abstract} signout(): void
    + {abstract} register(): void
    + {abstract} forget(): void
}

class User implements Action

class UserActionProxy implements Action {
    - target: Action
    + UserActionProxy(target: Action): UserActionProxy
}

class Main

Action <--o UserActionProxy

User <.. Main
UserActionProxy <.. Main

@enduml